# filler-algo

./: .gitignore  LICENSE  Makefile  README.md  main  main.c  main.py  pyproject.toml  setup.py
c_src/: Makefile  minimax.h  minimax_wrapper.pyx
src/filler_algo/c_src/: Makefile  minimax.c  minimax.h  minimax_wrapper.pyx
src/filler_algo/python_src/: game.py  main.py  vision.py
