[project]
name = "filler-algo"
version = "0.1.0"
description = ""
authors = [
    {name = "Elisei Kambalin",email = "erberum@gmail.com"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = "==3.13.5"
dependencies = [
    "cython (>=3.1.2,<4.0.0)",
    "setuptools (>=80.9.0,<81.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
