[project]
name = "filler-algo"
version = "0.1.0"
description = ""
authors = [
    { name = "Elisei Kambalin", email = "erberum@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = "==3.13.5"
dependencies = [
    "cython (>=3.1.2,<4.0.0)",
    "setuptools (>=80.9.0,<81.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)"
]

[build-system]
requires = ["Cython", "poetry-core", "setuptools"]
build-backend = "setuptools.build_meta"

[tool.poetry]
package-mode = false

[project.scripts]
filler-solve = "filler_algo.python_src.main:main"